--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery Title Goes Here</title>
+    <title>Jake Lundrigan Memorial</title>
     <link rel="stylesheet" href="photoswipe/photoswipe.css">
     <style>
         *, *::before, *::after { box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
@@ -32,7 +32,7 @@
     </script>
 </head>
 <body>
-    <h1>Gallery Title Goes Here</h1>
+    <h1>Sample Gallery</h1>
     <div id='test' class='gallery'>
         <a href='images/0001-1484x2232.jpg' data-pswp-width='1484' data-pswp-height='2232' data-cropped='true' target='_blank'><img src='thumbs/0001-100x150.jpg'></a>
         <a href='images/0002-1424x2170.jpg' data-pswp-width='1424' data-pswp-height='2170' data-cropped='true' target='_blank'><img src='thumbs/0002-100x152.jpg'></a>
